<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Interpreter</string>
    <string name="button_waiting">Hold to Record</string>
    <string name="button_recording">Recording...</string>
    <string name="button_send">Send</string>
    <string name="button_back_to_record">Back to Record</string>
    <string name="button_add_target">Add Target</string>
    <string name="button_login">Login</string>
    <string name="hint_self_id">Self ID</string>
    <string name="hint_target_id">Target ID</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_play">Click to Play</string>
    <string name="info_target">Target:</string>
    <string name="info_self">Self:</string>
    <string name="speech_service_name">SpeechService.apk</string>
</resources>
