<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_record"
            android:id="@+id/selfEdit"
            android:text = "2"
            android:hint="@string/hint_self_id"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/selfEdit"
            android:id="@+id/targetEdit"
            android:text = "1"
            android:hint="@string/hint_target_id"/>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/targetEdit"
            android:id="@+id/text_view"
            android:background="@color/text_background"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/button_record"
            android:text="@string/button_waiting"
            android:textColor="@color/text"
            android:background="@color/button_waiting"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:id="@+id/button_add_target"
            android:text="@string/button_add_target"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:visibility="invisible"
                android:id="@+id/button_back_to_record"
                android:text="@string/button_back_to_record"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:visibility="invisible"
                android:id="@+id/button_send"
                android:text="@string/button_send"/>
    </LinearLayout>
</RelativeLayout>
