<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:inputType="text"
             android:text = "xinyuyua"
            android:id="@+id/edit_username"
            android:hint="@string/hint_username"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:inputType="textPassword"
            android:text = "123qwe"
            android:id="@+id/edit_password"
            android:hint="@string/hint_password"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:id="@+id/button_login"
            android:text="@string/button_login"
            android:background="@color/button_login"/>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>

</LinearLayout>